chore: 调整角色信息栏样式

--- a/src/components/PlayerInfo/index.module.scss
+++ b/src/components/PlayerInfo/index.module.scss
@@ -1,6 +1,14 @@
 .playerInfoWrapper {
   flex-shrink: 0;
 
-  .avatar {
+  .playerInfoContent {
+    display: flex;
+    align-items: center;
+
+    .playerInfo {
+      font-size: 16px;
+      font-weight: 400;
+      margin-left: 10px;
+    }
   }
 }
