--- a/src/components/PlayerInfo/index.module.scss
+++ b/src/components/PlayerInfo/index.module.scss
@@ -9,6 +9,12 @@
       font-size: 16px;
       font-weight: 400;
       margin-left: 10px;
+      .playerInfoDetail {
+        display: flex;
+        .letf {
+          margin-right: 10px;
+        }
+      }
     }
   }
 }
