--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,10 @@
+:root:root {
+  // --rv-black: #fff;
+  // --rv-white: #000;
+  // --rv-primary-color: var(--rv-black);
+  // --rv-background-color-light: #000;
+  // --rv-background-color: #000;
+}
 .page-wrapper {
   display: flex;
   flex-direction: column;
