--- a/src/components/BattlePanel/cpns/PlayerCard/index.module.scss
+++ b/src/components/BattlePanel/cpns/PlayerCard/index.module.scss
@@ -1,10 +1,72 @@
 .playerCard {
   margin-bottom: 10px;
   flex-shrink: 0;
+  position: relative;
   .playerName {
     font-size: 1.2rem;
   }
   .playerInfoItem {
     display: flex;
+  }
+}
+
+.damageIndicator {
+  position: absolute;
+  top: 50%;
+  left: 20%;
+  // transform: translate(-50%, -50%);
+  z-index: 999;
+  color: red;
+  font-size: 24px;
+  animation: damageAnimation 1s ease-out forwards;
+}
+
+@keyframes damageAnimation {
+  0% {
+    opacity: 1;
+    transform: translateY(-10px);
+    font-size: 20px;
+  }
+  10% {
+    opacity: 0.9;
+    transform: translateY(-15px);
+  }
+  20% {
+    opacity: 0.8;
+    transform: translateY(-20px);
+  }
+  30% {
+    opacity: 0.7;
+    transform: translateY(-25px);
+  }
+  40% {
+    opacity: 0.6;
+    transform: translateY(-30px);
+  }
+  50% {
+    opacity: 0.5;
+    transform: translateY(-35px);
+    font-size: 24px;
+  }
+  60% {
+    opacity: 0.4;
+    transform: translateY(-40px);
+  }
+  70% {
+    opacity: 0.3;
+    transform: translateY(-45px);
+  }
+  80% {
+    opacity: 0.2;
+    transform: translateY(-50px);
+  }
+  90% {
+    opacity: 0.1;
+    transform: translateY(-55px);
+  }
+  100% {
+    opacity: 0;
+    font-size: 28px;
+    transform: translateY(-55px);
   }
 }
